fix nav background color on mobile

--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -632,11 +632,13 @@ p {
 @media only screen and (max-width: 768px) {
   .nav__items {
     flex-direction: column;
+    display: flex;
     position: fixed;
-    top: calc(calc(var(--gap-lg) * 2 + 32px) + 0.5rem);
+    top: 0;
     left: 0;
-    width: 100vw;
-    background-color: var(--color-navigation);
+    width: 100%;
+    height: min-content;
+    background-color: var(--color-navigation) !important;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
